--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "peerDependencies": {
     "react": ">=15.3.1",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-elements": "^2.0.2"
   },
   "dependencies": {
     "prop-types": "^15.6.0"
